Added tests and fixed createGame